pushed current state

--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,13 @@ button {
 input {
     width: 200px;
 }
+.torches {
+    display: flex;
+    flex-direction: row;
+}
+.torch {
+    padding-right: 10px;
+    .name {
+        width: 80px;
+    }
+}
